deployment/cfn/security-group.yml
AWSTemplateFormatVersion: '2010-09-09'
Description: This stack creates all required security groups
Parameters:
  Environment:
    Type: String
    Description: Environment Name (DEV)
    AllowedValues: ['DEV']
  Platform:
    Type: String
    Default: 'DOTCMS'
    Description: Platform Name
  VpcStackName:
    Type: String
    Description: Name of the stack which is used to create VPC and Subnets
Resources:
  # dotCMS ALB security group
  DotcmsLoadBalancerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: DOTCMS-ALB-SG
      GroupDescription: Access to the public facing load balancer
      VpcId:
        Fn::ImportValue: !Join [':', [!Ref 'VpcStackName', 'VPCId']]
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: '0.0.0.0/0'
          Description: Allow IPV4 HTTP
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIpv6: '::/0'
          Description: Allow IPV6 HTTP
      Tags:
        - Key: Name
          Value: !Sub '${Environment}-${Platform}-ALB-SG'
  # dotcms container security group
  DotcmsContainerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: DOTCMS-CONTAINER-SG
      GroupDescription: dotcms Container Security Group
      VpcId:
        Fn::ImportValue: !Join [':', [!Ref 'VpcStackName', 'VPCId']]
      Tags:
        - Key: Name
          Value: !Sub '${Environment}-${Platform}-DOTCMS-CONTAINER-SG'
  DotcmsContainerSecurityGroupIngressFromPublicALB:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      Description: Ingress from the public ALB
      GroupId: !Ref 'DotcmsContainerSecurityGroup'
      IpProtocol: -1
      SourceSecurityGroupId: !Ref 'DotcmsLoadBalancerSecurityGroup'
  # Hazelcast container security group
  HzContainerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: HZ-CONTAINER-SG
      GroupDescription: Hazelcast Server Container Security Group
      VpcId:
        Fn::ImportValue: !Join [':', [!Ref 'VpcStackName', 'VPCId']]
      Tags:
        - Key: Name
          Value: !Sub '${Environment}-${Platform}-HZ-CONTAINER-SG'
  HzContainerSecurityGroupSelfIngress:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      Description: Ingress from other containers in the same security group on hz port
      GroupId: !Ref 'HzContainerSecurityGroup'
      IpProtocol: tcp
      FromPort: 5701
      ToPort: 5701
      SourceSecurityGroupId: !Ref 'HzContainerSecurityGroup'
  HzContainerSecurityGroupIngressFromDotcms:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      Description: Ingress from dotcms container
      GroupId: !Ref 'HzContainerSecurityGroup'
      IpProtocol: tcp
      FromPort: 5701
      ToPort: 5701
      SourceSecurityGroupId: !Ref DotcmsContainerSecurityGroup
  # DB container security group
  DbContainerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: DB-CONTAINER-SG
      GroupDescription: Database Container Security Group
      VpcId:
        Fn::ImportValue: !Join [':', [!Ref 'VpcStackName', 'VPCId']]
      Tags:
        - Key: Name
          Value: !Sub '${Environment}-${Platform}-DB-CONTAINER-SG'
  DbContainerSecurityGroupIngressFromDotcms:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      Description: Ingress from dotcms container
      GroupId: !Ref 'DbContainerSecurityGroup'
      IpProtocol: tcp
      FromPort: 5432
      ToPort: 5432
      SourceSecurityGroupId: !Ref DotcmsContainerSecurityGroup
  # Elastic Search container security group
  EsContainerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: ES-CONTAINER-SG
      GroupDescription: Database Container Security Group
      VpcId:
        Fn::ImportValue: !Join [':', [!Ref 'VpcStackName', 'VPCId']]
      Tags:
        - Key: Name
          Value: !Sub '${Environment}-${Platform}-ES-CONTAINER-SG'
  EsContainerSecurityGroupSelfIngress9200:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      Description: Ingress from other containers in the same security group on 9200 port
      GroupId: !Ref 'EsContainerSecurityGroup'
      IpProtocol: tcp
      FromPort: 9200
      ToPort: 9200
      SourceSecurityGroupId: !Ref 'EsContainerSecurityGroup'
  EsContainerSecurityGroupSelfIngress9600:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      Description: Ingress from other containers in the same security group on 9600 port
      GroupId: !Ref 'EsContainerSecurityGroup'
      IpProtocol: tcp
      FromPort: 9600
      ToPort: 9600
      SourceSecurityGroupId: !Ref 'EsContainerSecurityGroup'
  EsContainerSecurityGroupIngressFromDotcms9200:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      Description: Ingress from dotcms container on 9200 port
      GroupId: !Ref 'EsContainerSecurityGroup'
      IpProtocol: tcp
      FromPort: 9200
      ToPort: 9200
      SourceSecurityGroupId: !Ref DotcmsContainerSecurityGroup
  EsContainerSecurityGroupIngressFromDotcms9600:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      Description: Ingress from dotcms container on 9600 port
      GroupId: !Ref 'EsContainerSecurityGroup'
      IpProtocol: tcp
      FromPort: 9600
      ToPort: 9600
      SourceSecurityGroupId: !Ref DotcmsContainerSecurityGroup
  EsContainerSecurityGroupIngressFromDotcms443:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      Description: Ingress from dotcms container on 9600 port
      GroupId: !Ref 'EsContainerSecurityGroup'
      IpProtocol: tcp
      FromPort: 443
      ToPort: 443
      SourceSecurityGroupId: !Ref DotcmsContainerSecurityGroup
  # Security Group for an Amazon EFS File System
  EfsSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Access to EFS
      VpcId:
        Fn::ImportValue: !Join [':', [!Ref 'VpcStackName', 'VPCId']]
      Tags:
        - Key: Name
          Value: !Sub '${Environment}-${Platform}-EFS-SG'
  EfsSecurityGroupIngressFromContainer:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      Description: Ingress from dotCMS Container
      GroupId: !Ref 'EfsSecurityGroup'
      IpProtocol: tcp
      FromPort: 2049
      ToPort: 2049
      SourceSecurityGroupId: !Ref 'DotcmsContainerSecurityGroup'
Outputs:
  DotcmsContainerSecurityGroup:
    Description: dotCMS Container Security Group Id
    Value: !Ref 'DotcmsContainerSecurityGroup'
    Export:
      Name: !Join [ ':', [ !Ref 'AWS::StackName', 'DotcmsContainerSecurityGroupId' ] ]
  HzContainerSecurityGroup:
    Description: Hazelcast Server Container Security Group Id
    Value: !Ref 'HzContainerSecurityGroup'
    Export:
      Name: !Join [ ':', [ !Ref 'AWS::StackName', 'HzContainerSecurityGroupId' ] ]
  DbContainerSecurityGroup:
    Description: Database Container Security Group
    Value: !Ref 'DbContainerSecurityGroup'
    Export:
      Name: !Join [ ':', [ !Ref 'AWS::StackName', 'DbContainerSecurityGroupId' ] ]
  EsContainerSecurityGroup:
    Description: Database Container Security Group
    Value: !Ref 'EsContainerSecurityGroup'
    Export:
      Name: !Join [ ':', [ !Ref 'AWS::StackName', 'EsContainerSecurityGroupId' ] ]
  DotcmsLoadBalancerSecurityGroup:
    Description: dotCMS Container Security Group Id
    Value: !Ref 'DotcmsLoadBalancerSecurityGroup'
    Export:
      Name: !Join [ ':', [ !Ref 'AWS::StackName', 'DotcmsLoadBalancerSecurityGroupId' ] ]
  EfsSecurityGroup:
    Description: EFS Security Group Id
    Value: !Ref 'EfsSecurityGroup'
    Export:
      Name: !Join [ ':', [ !Ref 'AWS::StackName', 'EfsSecurityGroupId' ] ]
